# solana-stablecoin-workshop

./: .env.example  .env.example.backup  .gitignore  .gitmodules  Anchor.toml  CCIP-AUTHORITY-SOLUTIONS.md  CCIP-COMPLETE-CHECKLIST.md  CCIP-IMPLEMENTATION-PLAN.md  CCIP-MULTISIG-IMPLEMENTATION.md  Cargo.toml  INSTRUCTIONS.md  INSTRUCTIONS_KR.md  README.md  TUTORIAL_PROJECT_ROOT.txt  feedback_filtered.md  package-lock.json  package.json
.github/: CODEOWNERS
client/: Cargo.toml
client/src/: chainlink.rs  oracle_client.rs
cross-chain-stablecoin/stablecoin-program/: .env.example  Anchor.toml  README.md  TEST-SUMMARY.md  TESTING.md  create-token-for-ccip.ts  mint-oracle-backed.ts  package-lock.json  package.json  test-ccip-mint.ts  test-ccip-oracle-integration.ts  test-individual.sh  test-multisig-oracle-mint.ts  test-new-instructions.ts  test-single-authority.ts
cross-chain-stablecoin/stablecoin-program/programs/stablecoin-program/: Cargo.toml
cross-chain-stablecoin/stablecoin-program/programs/stablecoin-program/src/: lib.rs
cross-chain-stablecoin/stablecoin-program/tests/: 0-program-initialization.ts  1-oracle-unit-tests.ts  2-stablecoin-unit-tests.ts  3-oracle-stablecoin-integration.ts  4-ccip-multisig-test.ts  oracle-integration.ts  real-oracle-cpi-test.ts  robust-oracle-test.ts.old  stablecoin-oracle-integration.ts.old  stablecoin-program.ts  stablecoin-unit.ts  working-oracle-cpi-test.ts.old
cross-chain-stablecoin/stablecoin-program/utils/: derive-pdas.ts  retry-helper.ts
oracle/: .env.example  Anchor.toml  CLIENT.md  DEPLOYMENT.md  OVERVIEW.md  README.md  TESTING.md
oracle/client/: Cargo.toml
oracle/client/src/: chainlink.rs  main.rs  oracle_client.rs  stablecoin_client.rs
oracle/programs/oracle/: Cargo.toml
oracle/programs/oracle/src/: lib.rs
oracle/programs/stablecoin/: Cargo.toml
oracle/programs/stablecoin/src/: lib.rs
oracle/tests/: 1-oracle-verify-and-store.ts  enhanced_oracle_test.ts
programs/example_verify/: Cargo.toml
programs/example_verify/src/: lib.rs
programs/oracle/: Cargo.toml
programs/oracle/src/: lib.rs
programs/stablecoin/src/: lib.rs
tests/: example_verify.ts  verify_test.ts
