[package]
name = "chainlink-stablecoin-client"
version = "0.1.0"
description = "Rust client for Chainlink Oracle-Backed Stablecoin system"
edition = "2021"

[dependencies]
# Chainlink SDKs - Test full features without anchor-client
chainlink-data-streams-sdk = { version = "1.0.3", features = ["full"] }
chainlink-data-streams-report = "1.0.3"

# Solana client libraries - using direct RPC (no anchor-client conflicts)
solana-client = "1.17.0"
solana-sdk = "1.17.0" 
# anchor-client = "0.31.1"  # Conflicts due to sha2 version mismatch

# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Additional utilities
env_logger = "0.10"
log = "0.4"
