[package]
name = "chainlink-stablecoin-client"
version = "0.1.0"
description = "Rust client for Chainlink Oracle-Backed Stablecoin system"
edition = "2021"

[dependencies]
# Real Chainlink Data Streams SDK
chainlink-data-streams-sdk = "1.0.3"
chainlink-data-streams-report = "1.0.3"

# Solana client libraries - using direct RPC (no anchor-client conflicts)
solana-client = "1.17.0"
solana-sdk = "1.17.0" 
solana-program = "1.17.0"

# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment and configuration
dotenv = "0.15"

# Additional utilities
env_logger = "0.10"
log = "0.4"
hex = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
snap = "1.1" # Added for snappy compression/decompression
