[package]
name = "oracle"
version = "0.1.0"
description = "Chainlink Oracle Program for Price Verification"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "oracle"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
chainlink_solana_data_streams = { git = "https://github.com/smartcontractkit/chainlink-solana", branch = "develop", subdir = "contracts/crates/chainlink-solana-data-streams" }
anchor-lang = "0.31.1"
solana-program = "1.17.0"  # Required for Pubkey type compatibility with chainlink crate

