[package]
name = "stablecoin"
version = "0.1.0"
description = "SPL Token Stablecoin Program with Oracle Integration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stablecoin"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
# Anchor framework
anchor-lang = "0.31.1"
# Note: anchor-spl temporarily removed due to version conflicts
# Will add back in Phase 3 with proper version resolution
